# MCPlease

./: .continue.yaml  .continuerc  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_JOURNEY.md  Dockerfile  Dockerfile.arm64  FINAL_INSTRUCTIONS.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_SYSTEM.md  LICENSE  Makefile  ONE_STEP_INSTRUCTIONS.md  PRODUCT_REQUIREMENTS.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_START_GUIDE.md  README.md  README_FINAL.md  SECURITY.md  VSCODE_SETUP.md  api_server.py  demo.py  docker-compose.build.yml  docker-compose.production.yml  docker-compose.yml  download_model.py  final_demo.py  haproxy.cfg  install.bat  install.py  install.sh  local_ai_client.py  mcp_config.json  mcp_server.py  mcpleasant.py  mcpleasant_mcp.py  mcpleasant_mcp_fixed.py  (+21 more)
.continue/mcpServers/: new-mcp-server.yaml
.github/workflows/: ci.yml
.mcp_contexts/: anon_09b1f864_1755557252886.json  anon_0a85e456_1755556143135.json  anon_1087fcb1_1755556143123.json  anon_28cbff11_1755556110331.json  anon_2c0b248c_1755555040350.json  anon_47529c89_1755557017594.json  anon_4af50f63_1755556110366.json  anon_672d9a3e_1755555079112.json  anon_6f74971e_1755557252882.json  anon_8a08404b_1755557245901.json  anon_936b1143_1755557017586.json  anon_c6f2e039_1755555040286.json  anon_d01ef6b1_1755557017584.json  anon_e130db0d_1755557252887.json  anon_e1c95382_1755557017593.json  auth_test_user_217dbcfa_1755556143128.json
docs/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDES.md  TROUBLESHOOTING_GUIDE.md  ai_model_manager_implementation.md  dependency_installation.md  firewall-configuration.md
examples/: ai_model_manager_demo.py  ai_model_manager_interface_demo.py  memory_management_demo.py  model_download_demo.py
monitoring/: prometheus-rules.yml  prometheus.yml
scripts/: build-docker.sh  check_mcp_health.py  clean_mcp_contexts.py  deploy-pi.sh  deploy-production.sh  dev-docker.sh  install.sh  install_dependencies.py  install_uv.py  run_comprehensive_tests.py  run_tests.py  setup_environment.py  setup_ide.py  test_installer.py  test_installer_dry_run.sh  test_mcp_setup.py  test_transports.py
src/: __init__.py  ai_mcp_server.py  api_server.py  mcp_server.py  simple_ai_mcp_server.py  simple_mcp_server.py
src/config/: __init__.py  hardware.py  profiles.py  settings.py
src/environment/: README.md  __init__.py  installer.py  manager.py  setup.py  validator.py
src/mcp/: __init__.py  context.py  protocol.py  tools.py
src/mcplease_mcp/: __init__.py  main.py
src/mcplease_mcp/adapters/: __init__.py  ai_adapter.py
src/mcplease_mcp/config/: __init__.py  hardware.py  installer.py  manager.py
src/mcplease_mcp/context/: __init__.py  manager.py  storage.py
src/mcplease_mcp/protocol/: __init__.py  handler.py  models.py  resources.py
src/mcplease_mcp/security/: __init__.py  auth.py  manager.py  network.py  tls.py
src/mcplease_mcp/server/: __init__.py  server.py  transports.py
src/mcplease_mcp/tools/: __init__.py  advanced_tools.py  ai_tools.py  registry.py
src/mcplease_mcp/utils/: error_handler.py  exceptions.py  hardware.py  health.py  logging.py  ngrok_tunnel.py  performance.py
src/utils/: __init__.py  error_handler.py  exceptions.py  logging.py
tests/: __init__.py  test_ai_adapter.py  test_ai_integration.py  test_ai_model_manager.py  test_ai_tools.py  test_config_management.py  test_context_manager.py  test_context_storage.py  test_dependency_installer.py  test_docker_container.py  test_environment.py  test_error_handling.py  test_final_integration.py  test_graceful_degradation.py  test_ide_integration.py  test_mcp_server.py  test_memory_integration.py  test_memory_management.py  test_model_integration.py  test_model_manager.py  test_network_security.py  test_performance_monitoring.py  test_pi_deployment.py  test_protocol_handler.py  test_protocol_integration.py  test_protocol_models.py  test_security_integration.py  test_security_manager.py  test_tool_registry.py  test_transports.py  test_uv_installation.py
